[metadata]
name = pssmpro
version = 0.0.2
author = Deepro Banerjee
author_email = deepro.2.4@gmail.com
description = A python tool for numerically encoding protein sequences based on position specific scoring matrices
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deeprob/pssmpro.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.0
install_requires =
    numpy

[options.packages.find]
where = src

[options.package_data]
* =
    pssmpro/data/example.fasta
    pssmpro/data/pssm_files/*